--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ title:            Journey with CS
 tagline:          'Jounrey into the world of computer science with Ankit Khare'
 description:      'Sharing my computer sicence experience with the world.'
 url:              https://ankit1khare.github.io/journeywithcs/
-baseurl:          /
-
+baseurl:          ''
+permalink:        /:title/
 author:
   name:           'Ankit Khare'
   url:            
