--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 # Setup
 title:            Journey with CS
 tagline:          'Jounrey into the world of computer science with Ankit Khare'
-description:      'Sharing my computer sicence experience with the world.'
+description:      'Sharing my computer sicence experience with the world'
 url:              https://ankit1khare.github.io/journeywithcs/
 baseurl:          'https://ankit1khare.github.io/journeywithcs/'
 permalink:        /:title/
